Sculpt Mode brushes target wrong points on multires level 0 when using shapekeys #77763

Closed
opened 2020-06-11 16:14:13 +02:00 by Julien Kaspar · 6 comments
Member

System Information
Operating system: Linux-5.3.0-55-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.59

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-11 09:02, hash: 665acd2903

Short description of error
When sculpting on an object with a multires modifier it works fine on every subdivision level. But once a single shapekey is added, the base shrinks on the lowes resolution so it's harder to target the vertices with the brushes.

Exact steps for others to reproduce the error

  • Add a monkey object
  • Use the grab brush and enable "Grab Active Vertex" in the brush options
  • Add a multires modifier
  • Compare the difference in the white wires when the multires is toggled on/off

Selection_009.png
Selection_010.png

**System Information** Operating system: Linux-5.3.0-55-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.59 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-11 09:02, hash: `665acd2903` **Short description of error** When sculpting on an object with a multires modifier it works fine on every subdivision level. But once a single shapekey is added, the base shrinks on the lowes resolution so it's harder to target the vertices with the brushes. **Exact steps for others to reproduce the error** - Add a monkey object - Use the grab brush and enable "Grab Active Vertex" in the brush options - Add a multires modifier - Compare the difference in the white wires when the multires is toggled on/off ![Selection_009.png](https://archive.blender.org/developer/F8608453/Selection_009.png) ![Selection_010.png](https://archive.blender.org/developer/F8608455/Selection_010.png)
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Sergey Sharybin was assigned by Julien Kaspar 2020-06-11 16:21:39 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Multires Simple Subdivision type is fine

Multires Simple Subdivision type is fine

This issue was referenced by 179bd1ea7d

This issue was referenced by 179bd1ea7d4d1b31ce22ac1d5d0c0b32b843aa6f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#77763
No description provided.